<resources>
    <string name="app_name" translatable="false">Betaar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity" translatable="false">FAB_Menu</string>
    <string name="title_veterinary">Veterinarian</string>
    <string name="title_client">Client</string>
    <string name="title_organization">Organization</string>
    <string name="title_organization_name">Organization Name</string>
    <string name="title_sale_products">Sale Products</string>
    <string name="title_offer_jobs">Offer Jobs</string>
    <string-array name="qualification_type">
        <item>Select</item>
        <item>LAD</item>
        <item>DVM</item>
    </string-array>
    <string-array name="product_types">
        <item>Select Product Type</item>
        <item>Dairy Solution</item>
        <item>Pet Solution</item>
        <item>Equine Solution</item>
        <item>Birds Solution</item>
        <item>Wild Life Solution</item>

    </string-array>
    <string-array name="only_dairy">
        <item>Dairy Solution</item>
    </string-array>
    <string-array name="only_pet">
        <item>Pet Solution</item>
    </string-array>
    <string-array name="only_equine">
        <item>Equine Solution</item>
    </string-array>
    <string-array name="only_bird">
        <item>Bird Solution</item>
    </string-array>
    <string-array name="only_wild_life">
        <item>Wild Life Solution</item>
    </string-array>
    <string-array name="product_categories_for_dairy">
        <item>Select Category</item>
        <item>Animals (sale &amp; pur)</item>
        <item>Milk (sale &amp; purc)</item>
        <item>Labour</item>
        <item>Land on Rent</item>


    </string-array>
    <string-array name="product_categories_for_dairy_organization">
        <item>Select Category</item>
        <item>Accessories</item>
        <item>Feed</item>
        <item>Animals (sale &amp; pur)</item>
        <item>Milking Machine</item>
        <item>Medicine Products</item>
        <item>Shed Constructions</item>
        <item>Labs</item>
        <item>Labour</item>
        <item>Land On Rent</item>
        <item>Sprays</item>
        <item>Milk (sale &amp; purc)</item>
        <item>Labour</item>
        <item>Dairy Crops Seed</item>


    </string-array>
    <string-array name="product_categories_for_pets">
        <item>Select Category</item>
        <item>Pets (sale &amp; pur)</item>
        <item>Labour</item>
        <item>Pet Trainer</item>
        <item>Breeder Services</item>

    </string-array>
    <string-array name="product_categories_for_pets_organization">
        <item>Select Category</item>
        <item>Accessories</item>
        <item>Feed</item>
        <item>Pets (sale &amp; pur)</item>
        <item>Veccinations</item>
        <item>Medicine Products</item>
        <item>Labour</item>
        <item>Cages/Housing Const</item>
        <item>Labs</item>
        <item>Labour</item>
        <item>Pet Trainer</item>
        <item>Breeder Services</item>

    </string-array>
    <string-array name="product_categories_for_equine">
        <item>Select Category</item>
        <item>Equine (sale &amp; pur)</item>
        <item>Labour</item>
        <item>Horse Trainer</item>
        <item>Breede Services</item>
    </string-array>
    <string-array name="product_categories_for_equine_organization">
        <item>Select Category</item>
        <item>Accessories</item>
        <item>Feed</item>
        <item>Equine (sale &amp; pur)</item>
        <item>Vaccinations</item>
        <item>Medicine Products</item>
        <item>Shed Construction</item>
        <item>Labs</item>
        <item>Labour</item>
        <item>Horse Trainer</item>
        <item>Breede Services</item>
    </string-array>
    <string-array name="product_categories_for_bird">
        <item>Select Category</item>
        <item>Birds (sale &amp; pur)</item>
        <item>Labour</item>
        <item>Egg (sale &amp; pur)</item>
        <item>Shed for Rent</item>

    </string-array>
    <string-array name="product_categories_for_bird_organization">
        <item>Select Category</item>
        <item>Accessories</item>
        <item>Feed</item>
        <item>Birds (sale &amp; pur)</item>
        <item>Veccinatios</item>
        <item>Medicine Products</item>
        <item>Cates/Shed Const</item>
        <item>Labs</item>
        <item>Labour</item>
        <item>Egg (sale &amp; pur)</item>
        <item>Shed for Rent</item>

    </string-array>
    <string-array name="product_categories_for_other">
        <item>Select Category</item>
        <item>Animals (sale &amp; pur)</item>
        <item>Labour</item>

    </string-array>
    <string-array name="product_categories_for_other_organization">
        <item>Select Category</item>
        <item>Acceesories</item>
        <item>Feed</item>
        <item>Animals (sale &amp; pur)</item>
        <item>Vaccinations</item>
        <item>Medicine Products</item>
        <item>Aquariums Cages</item>
        <item>Labs</item>
        <item>Labour</item>

    </string-array>
    <string-array name="product_sub_categories_for_dairy_accesories">
        <item>Select Sub Category</item>
        <item>Surgical Instruments</item>
        <item>Fooder Cutting Machine</item>
        <item>Fans/Shower</item>
        <item>Tags/Tag Markers</item>
        <item>Calf Cages/Mats</item>
        <item>TMR/Tractor/Trolley</item>
        <item>Bio-Gas Plant</item>
        <item>Cattle Crush</item>
        <item>Other</item>

    </string-array>
    <string-array name="product_sub_categories_for_dairy_feed">
        <item>Select Sub Category</item>
        <item>Silage</item>
        <item>Fresh Fooder</item>
        <item>Wanda</item>
        <item>Wanda Ingredient</item>
        <item>Hay/Beet Plup</item>
        <item>Wheat Straw</item>
        <item>Feed Additives</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_animals">
        <item>Select Sub Category</item>
        <item>Local Dairy Cows</item>
        <item>Imported Dairy Cows</item>
        <item>Buffalo</item>
        <item>Sheep</item>
        <item>Goat</item>
        <item>Bulls</item>
        <item>Qurban Animals For Eid</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_milking_parlour">
        <item>Select Sub Category</item>
        <item>Mobile Machines</item>
        <item>Milking rows</item>
        <item>Milking Parlour</item>
        <item>Spare Parts</item>
        <item>Acid/Alkali For CIP</item>
        <item>Teat Dip Solutions</item>
        <item>Chillers</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_medicine_products">
        <item>Select Sub Category</item>
        <item>Vaccinations</item>
        <item>Dewormer</item>
        <item>Antibiotics</item>
        <item>Hormones</item>
        <item>NSAIDS/Steroids</item>
        <item>Supportive</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_sheed_construction">
        <item>Select Sub Category</item>
        <item>Open Shed</item>
        <item>Semi Control Shed</item>
        <item>Control Shed</item>
        <item>Desi Structure</item>
        <item>Shed Material</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_labs">
        <item>Select Sub Category</item>
        <item>Feed Analysis</item>
        <item>Blood Analysis</item>
        <item>Fecal Analysis</item>
        <item>X-Rays</item>
        <item>Ultrasounds</item>
        <item>Water Analysis</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_labour">
        <item>Select Sub Category</item>
        <item>Milker</item>
        <item>Feeding Boy</item>
        <item>Supervisor</item>
        <item>Thekedar</item>
        <item>Cook</item>
        <item>Security Guard</item>
        <item>Electrician/Welder</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_land_on_rent">
        <item>Select Sub Category</item>
        <item>Shed For Rent</item>
        <item>Agriculture Land For Rent</item>


    </string-array>
    <string-array name="product_sub_categories_for_dairy_sprays">
        <item>Select Sub Category</item>
        <item>Pesticides</item>
        <item>Insecticides</item>
        <item>Disinfectants</item>
        <item>Bactericidal</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_milk_sale_pur">
        <item>Select Sub Category</item>
        <item>Cow Milk</item>
        <item>Buffalo Milk</item>
        <item>Goat Milk</item>
        <item>Camel Milk</item>
        <item>Cow &amp; Buffalo Milk</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_sub_categories_for_dairy_crops_seed">
        <item>Select Sub Category</item>
        <item>Corn</item>
        <item>Alfalfa</item>
        <item>Sorghum</item>
        <item>Oats</item>
        <item>Rhodes Grass</item>
        <item>Other</item>
    </string-array>
    <string-array name="product_categories">
        <item>Select Category</item>
        <item>Dairy Farm job</item>
        <item>Dairy Marketing job</item>
        <item>Poultry Farm job</item>
        <item>Poultry Marketing job</item>
        <item>Zoo job</item>
        <item>Equine farm job</item>
        <item>Pet hospital job</item>
        <item>Other</item>

    </string-array>
    <string-array name="Surgeon">
        <item>Select</item>
        <item>Surgery1</item>
        <item>Surgery2</item>
        <item>Surgery3</item>
        <item>Surgery4</item>
        <item>Surgery5</item>
    </string-array>
    <string-array name="dairy_categories">
        <item>Select Category</item>
        <item>Cow</item>
        <item>Buffalo</item>
        <item>Sheep</item>
        <item>Goat</item>
        <item>Camel</item>
    </string-array>
    <string-array name="pets_categories">
        <item>Select Category</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
    </string-array>
    <string-array name="quine_categories">
        <item>Select Category</item>
        <item>Horse</item>
        <item>Donkey</item>
        <item>Mule</item>
    </string-array>
    <string-array name="birds_categories">
        <item>Select Category</item>
        <item>Ostrich</item>
        <item>Poultry Birds</item>
        <item>Fancy Birds</item>
        <item>Game Birds</item>
    </string-array>
    <string-array name="other_solution">
        <item>Select Category</item>
        <item>Fish</item>
        <item>Lion</item>
        <item>Deer</item>
        <item>Monkey</item>
        <item>Others</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="prompt_phone">Mobile No.</string>
    <string name="prompt_address">Address</string>
    <string name="help_for_signup">Need help for whom to sign up?</string>
    <string name="register_as_org">Register as Organization</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agreement">I agree to these </string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="call_vet">Call Veterinarian</string>
    <string name="sale_product">Sale Product</string>
    <string name="pet_sol">Pets Solutions</string>
</resources>