<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wth_gradian"
    tools:context="betaar.pk.SignUpAsOrganization">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:text="@string/register_as_org"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ScrollView
            android:id="@+id/rl_main_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_eidt_views"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_width"
                        android:background="@drawable/et_background1"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="13sp" />


                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_width"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/et_background1"
                        android:hint="@string/fullname"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="13sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_width"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="2dp"
                            android:layout_weight="1"
                            android:background="@drawable/et_background1"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/et_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/et_width"
                            android:layout_marginLeft="2dp"
                            android:layout_weight="1"
                            android:background="@drawable/et_background1"
                            android:hint="@string/prompt_phone"
                            android:inputType="number"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textSize="13sp" />
                    </LinearLayout>


                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_width"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/et_background1"
                        android:hint="@string/prompt_address"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_width"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="2dp"
                            android:layout_weight="1"
                            android:background="@drawable/et_background1"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/et_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/et_width"
                            android:layout_marginLeft="2dp"
                            android:layout_weight="1"
                            android:background="@drawable/et_background1"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/terms_and_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/agreement"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/tv_terms_and_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:autoLink="web"
                            android:gravity="center"
                            android:textColor="@color/colorRed"
                            android:textSize="10sp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/bt_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_eidt_views"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/button_press_syle"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />


            </RelativeLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/progress_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logi_icon"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>
