<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wth_gradian">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_buttons_iews"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="55dp"
            android:fontFamily="serif"
            android:text="Register As"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_buttons_iews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/bt_call_a_veteriany"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_press_syle">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_vertrinarian" />

                <TextView
                    android:id="@+id/tv_veterinarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_veterinary"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bt_client"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_press_syle">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_client" />

                <TextView
                    android:id="@+id/tv_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_client"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bt_organization"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_press_syle">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_organization" />

                <TextView
                    android:id="@+id/tv_organization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_organization"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/help_for_signup"
                android:textColor="@color/color_pure_red"
                android:textSize="13sp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>