<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wth_gradian">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="61dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pet_sol"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <RelativeLayout
            android:id="@+id/rl_spiner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_width"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/spiner_background">

            <Spinner
                android:id="@+id/sp_select_pet_category"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/colorWhite"
                android:entries="@array/dairy_categories"
                android:padding="2dp"
                android:scrollbarThumbVertical="@drawable/scrollview_thumb"
                android:scrollbarTrackVertical="@drawable/vertical_scrollview_traack" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_spiner"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/bt_call_a_veteriany"
                android:layout_width="180dp"
                android:layout_height="@dimen/et_width"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_press_syle">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageView1"
                        android:layout_width="20dp"
                        android:layout_height="14dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/ic_call" />

                    <TextView
                        android:id="@+id/tv_call_vert"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:text="@string/call_vet"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />


                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/bt_accessories"
                android:layout_width="180dp"
                android:layout_height="@dimen/et_width"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_press_syle">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/ic_pets" />

                    <TextView
                        android:id="@+id/tv_farm_solution"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:text="@string/pet_sol"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bt_sale_pets"
                android:layout_width="180dp"
                android:layout_height="@dimen/et_width"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_press_syle">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageView3"
                        android:layout_width="20dp"
                        android:layout_height="15dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/ic_pets" />

                    <TextView
                        android:id="@+id/tv_sale_pets"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:text="@string/sale_product"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />


                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>